<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:background="@drawable/sign_up_background"
    android:orientation="vertical"
    android:padding="26dp">

    <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="170dp"
        android:scrollbarThumbVertical="@null">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="26dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_text_username_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textDirection="rtl"
                app:counterEnabled="true"
                app:counterMaxLength="10">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/monadi"
                    android:hint="@string/username_hint"
                    android:inputType="text"
                    android:paddingRight="20dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_text_email_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_text_username_sign_up"
                android:textDirection="rtl"
                app:counterMaxLength="10"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/monadi"
                    android:hint="@string/e_mail_hint"
                    android:inputType="textEmailAddress"
                    android:paddingRight="20dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_text_password_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_text_email_sign_up"
                android:layoutDirection="rtl"
                android:textDirection="rtl"
                app:counterMaxLength="10"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/monadi"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:paddingRight="20dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_text_confirm_password_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_text_password_sign_up"
                android:layoutDirection="rtl"
                android:textDirection="rtl"
                app:counterMaxLength="10"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/monadi"
                    android:hint="@string/confirm_password_hint"
                    android:inputType="textPassword"
                    android:paddingRight="20dp" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_text_confirm_password_sign_up"
                android:layout_marginHorizontal="56sp"
                android:layout_marginTop="24dp"
                android:background="@drawable/sign_up_button"
                android:fontFamily="@font/aniq"
                android:text="@string/sign_up_button"
                android:textColor="@color/sign_up_color_white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_sign_up"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/aniq"
                android:text="@string/sign_in"
                android:textColor="@color/sign_up_color_blue"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>


    </ScrollView>

</LinearLayout>