<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="top"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardElevation="4dp"
        app:ignore="NamespaceTypo"
        card_view:cardCornerRadius="15dp"
        card_view:contentPadding="18dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="40dp">


            <TextView
                android:id="@+id/emp_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/monadi"
                android:text="@string/msg_response"
                android:textColor="#00058B"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/emp_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emp_name"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/monadi"
                android:text="@string/company_phone"
                android:textColor="#000"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/emp_phone_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emp_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@+id/emp_phone"
                android:fontFamily="@font/monadi"
                android:text="01061462749"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/cost_monthly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emp_phone"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/monadi"
                android:text="@string/cost"
                android:textColor="#000"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/cost_monthly_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emp_phone_data"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@+id/cost_monthly"
                android:fontFamily="@font/monadi"
                android:text="50 جنية"
                android:textSize="15sp" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>