<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView

            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="60dp"
            android:elevation="80dp"
            android:outlineAmbientShadowColor="#000"
            card_view:cardBackgroundColor="#EBE9E9"
            card_view:cardCornerRadius="30dp"
            card_view:cardElevation="6dp"
            card_view:cardMaxElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="400dp">

                <TextView
                    android:id="@+id/full_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="@font/monadi"
                    android:text="@string/full_name"
                    android:textColor="#323232"
                    android:textDirection="rtl"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edit_full_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/full_name"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/custom_edit_text"
                    android:ems="15"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edit_full_name"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="@font/monadi"
                    android:text="@string/email"
                    android:textColor="#323232"
                    android:textDirection="rtl"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edit_user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_email"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/custom_edit_text"
                    android:ems="15"
                    android:inputType="text" />


                <TextView
                    android:id="@+id/user_addres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edit_user_email"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="@font/monadi"
                    android:text="@string/address"
                    android:textColor="#323232"
                    android:textDirection="rtl"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edit_user_addres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_addres"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/custom_edit_text"
                    android:ems="15"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/home_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edit_user_addres"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="@font/monadi"
                    android:text="@string/home_number"
                    android:textColor="#323232"
                    android:textDirection="rtl"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edit_home_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/home_number"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/custom_edit_text"
                    android:ems="15"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/user_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edit_home_number"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="@font/monadi"
                    android:text="@string/user_phone"
                    android:textColor="#323232"
                    android:textDirection="rtl"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edit_user_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_phone"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/custom_edit_text"
                    android:ems="15"
                    android:inputType="text" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="140dp"
                    android:layout_height="38dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/btn_request"
                    android:fontFamily="@font/aniq"
                    android:text="ارسال"
                    android:textColor="#FFFFFF" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>